--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~8.2.7",
     "@angular/router": "~8.2.7",
     "@ng-bootstrap/ng-bootstrap": "^5.1.1",
+    "angular2-image-upload": "^1.0.0-rc.2",
     "bootstrap": "^4.3.1",
     "cors": "^2.8.5",
     "font-awesome": "^4.7.0",
